--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "request-promise": "^4.1.1"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-cli": "^6.11.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.13.2"
