--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "node-telegram-bot-api": "^0.23.3",
     "nodemon": "^1.10.0",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1"
-  },
-  "devDependencies": {
+    "request-promise": "^4.1.1",
     "babel-cli": "^6.11.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.13.2"
