--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "start": "./node_modules/.bin/nodemon lib/index.js"
   },
   "dependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
     "body-parser": "^1.15.2",
+    "botanio": "0.0.6",
     "express": "^4.14.0",
     "node-env-file": "^0.1.8",
     "node-telegram-bot-api": "^0.23.3",
     "nodemon": "^1.10.0",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1",
-    "babel-cli": "^6.11.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2"
+    "request-promise": "^4.1.1"
   }
 }
